--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -24,6 +24,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   flutter:
     sdk: flutter
+  image_picker: ^0.8.3+2
   provider: ^5.0.0
 
 dev_dependencies:
