--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,8 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.3+2
+  path: ^1.8.0
+  path_provider: ^2.0.2
   provider: ^5.0.0
 
 dev_dependencies:
