--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,6 +28,7 @@ dependencies:
   path: ^1.8.0
   path_provider: ^2.0.2
   provider: ^5.0.0
+  sqflite: ^2.0.0+3
 
 dev_dependencies:
   flutter_test:
