--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,6 +25,7 @@ dependencies:
   flutter:
     sdk: flutter
   image_picker: ^0.8.3+2
+  location: ^4.3.0
   path: ^1.8.0
   path_provider: ^2.0.2
   provider: ^5.0.0
